[AI + COMMON] updated AiRequests to be move user-friendly, created prompt engine, updated logic of parsing and produce/consume